Initial implementation of SearchView; fix CustomColors; Adapt `other` color set

--- a/Hollow/Hollow/Info.plist
+++ b/Hollow/Hollow/Info.plist
@@ -20,6 +20,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Allow photo library access to save image from the app.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
