Prepare for localization

--- a/Hollow/Hollow/Info.plist
+++ b/Hollow/Hollow/Info.plist
@@ -21,7 +21,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Allow access to save photos to your library.</string>
+	<string>INFO_PHOTO_LIBRARY_ACCESS_DESCRIPTION</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
