--- a/Source/Hollow/Hollow.entitlements
+++ b/Source/Hollow/Hollow.entitlements
@@ -6,6 +6,8 @@
 	<string>development</string>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
 	<key>com.apple.security.personal-information.photos-library</key>
